# Integration-project

./: AB_test.md  API_doc.md  ARCHITECTURE.md  Dockerfile  MLOPS.md  Metrics.md  ONYX_ML&uWSGI + NGINX.md  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Makefile-checkpoint
app/: app.py  test.py
app/.ipynb_checkpoints/: test-checkpoint.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: model_1.pkl  myfile.pkl
notebooks/: Models fitting vers (1).ipynb  Untitled.ipynb
