[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "integration_project"
version = "0.0.1"
description = "Project with model implementation for mifi task"
authors = [
  { name = "MironyukDN" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["integration_project"]
include = ["pyproject.toml", "integration_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["integration_project"]
force-sort-within-sections = true

